k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: inesmrad/soprahr-cicd-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 9009
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
          requests:
            memory: "512Mi"
            cpu: "200m"
        command: 
        - "java"
        - "-Xmx768m"
        - "-Xms512m"
        - "-Djava.security.egd=file:/dev/./urandom"
        - "-jar"
        - "app.jar"
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 9009
            scheme: HTTP
          failureThreshold: 30
          periodSeconds: 10
          timeoutSeconds: 5
          initialDelaySeconds: 60
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 9009
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 20
          timeoutSeconds: 10
          failureThreshold: 6
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 9009
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 45
          timeoutSeconds: 15
          failureThreshold: 3
          successThreshold: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: inesmrad/soprahr-cicd-frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "256Mi"
            cpu: "300m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        startupProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
